# flowertune-llm

./: README.md
flowertune-llm/: pyproject.toml
flowertune-llm/flowertune/: client_app.py  dataset.py  models.py  server_app.py
flowertune-llm/flowertune-unsloth/flowertune-unsloth/med_llm/: models.py  server_app.py
flowertune-unsloth/: pyproject.toml
flowertune-unsloth/med_llm/: client_app.py  dataset.py  models.py  strategy.py
