[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "med_llm"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets>=0.3.0",
    "torch==2.3.1",
    "trl==0.8.1",
    "bitsandbytes==0.45.0",
    "scipy==1.13.0",
    "peft==0.6.2",
    "transformers==4.47.0",
    "sentencepiece==0.2.0",
    "omegaconf==2.3.0",
    "hf_transfer==0.1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "gadisa"

[tool.flwr.app.components]
serverapp = "med_llm.server_app:app"
clientapp = "med_llm.client_app:app"

[tool.flwr.app.config]
model.name = "meta-llama/Llama-3.1-8B-Instruct"
model.quantization = 4
model.gradient-checkpointing = true
model.lora.peft-lora-r = 16
model.lora.peft-lora-alpha = 16
train.save-every-round = 1
train.learning-rate-max = 5e-5
train.learning-rate-min = 1e-6
train.seq-length = 512
train.training-arguments.output-dir = ""
train.training-arguments.learning-rate =""
train.training-arguments.per-device-train-batch-size = 4
train.training-arguments.gradient-accumulation-steps = 2
train.training-arguments.logging-steps = 10
train.training-arguments.num-train-epochs = 1
train.training-arguments.max-steps = 10
train.training-arguments.save-steps = 1000
train.training-arguments.save-total-limit = 5
train.training-arguments.gradient-checkpointing = "unsloth"
train.training-arguments.lr-scheduler-type = "constant"
train.training-arguments.fp16 = false
train.training-arguments.bf16 = true
train.training-arguments.warmup_steps = 2
train.training-arguments.optim = "paged_adamw_8bit"
strategy.fraction-fit = 0.1
strategy.fraction-evaluate = 0.0
num-server-rounds = 10

[tool.flwr.app.config.static]
dataset.name = "medalpaca/medical_meadow_medical_flashcards"

[tool.flwr.federations]
default = "local-simulation"


[tool.flwr.federations.local-simulation]
options.num-supernodes = 20
options.backend.client-resources.num-cpus = 6
options.backend.client-resources.num-gpus = 1
